Adding more refs

--- a/trombetta.bib
+++ b/trombetta.bib
@@ -5,3 +5,186 @@ title={Go Navy, beat Army},
 journal={Journal of Beating Army},
 volume={22},
 pages={1845--2022}}
+
+
+
+
+
+
+
+@article{Denny1983,
+author = {Denny, Mark W},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Unknown - 2008 - A Simple Device for Recording the Maximum Force Exerted on Intertidal Organisms Author ( s ) Mark W . Denny Source Lim.pdf:pdf},
+journal = {Limnology And Oceanography},
+mendeley-groups = {trombetta},
+pages = {1269--1274},
+publisher = {American Society of Limnology and Oceanography, Inc., School of Oceanography, WB-10 University of Washington Seattle WA 98195 USA,},
+title = {{A simple device for recording the maximum force exerted on intertidal organisms}},
+url = {papers2://publication/uuid/8D46193D-287B-47CB-BB85-5E68D3DBAD13},
+volume = {28},
+year = {1983}
+}
+@article{Grimmer2008,
+author = {Grimmer, S and Ernst, M and Gunther, M and Blickhan, Reinhard},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Grimmer et al. - 2008 - Running on uneven ground leg adjustment to vertical steps and self-stability.pdf:pdf},
+journal = {Journal of Experimental Biology},
+mendeley-groups = {trombetta},
+number = {18},
+pages = {2989--3000},
+publisher = {THE COMPANY OF BIOLOGISTS LTD},
+title = {{Running on uneven ground: leg adjustment to vertical steps and self-stability}},
+url = {papers2://publication/doi/10.1242/jeb.014357},
+volume = {211},
+year = {2008}
+}
+@article{Daley2006,
+abstract = {Introduction In the complex natural environment, legged terrestrial animals must negotiate variable terrain, start, stop, turn, jump, land and recover from unexpected perturbations. Unsteady locomotion is likely to present quite },
+author = {Daley, Monica A and Usherwood, James R and Felix, G and Biewener, Andrew A},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Daley et al. - 2006 - Running over rough terrain guinea fowl maintain dynamic stability despite a large unexpected change in substrate h.pdf:pdf},
+journal = {Journal of Experimental Biology},
+mendeley-groups = {trombetta},
+number = {1},
+pages = {171--187},
+publisher = {THE COMPANY OF BIOLOGISTS LTD},
+title = {{Running over rough terrain: guinea fowl maintain dynamic stability despite a large unexpected change in substrate height}},
+url = {papers2://publication/doi/10.1242/jeb.01986 http://jeb.biologists.org/cgi/content/abstract/209/1/171 papers2://publication/uuid/2352B002-80A5-4B4F-ADAD-7854F5FCC2AB},
+volume = {209},
+year = {2006}
+}
+@article{Bramble2004,
+abstract = {Striding bipedalism is a key derived behaviour of hominids that possibly originated soon after the divergence of the chimpanzee and human lineages. Although bipedal gaits include walking and running, running is generally },
+author = {Bramble, D and Lieberman, D},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Bramble, Lieberman - 2004 - Endurance running and the evolution of Homo.pdf:pdf},
+journal = {Nature},
+mendeley-groups = {trombetta},
+publisher = {Nature Publishing Group},
+title = {{Endurance running and the evolution of Homo.}},
+url = {http://www.ncbi.nlm.nih.gov/sites/entrez?db=pubmed{\&}uid=15549097{\&}cmd=showdetailview{\&}indexed=google papers2://publication/uuid/BA133E65-0339-48FA-AE4C-0C8F9D1A17E9},
+year = {2004}
+}
+@article{Ferris1999,
+abstract = {Human runners adjust the stiffness of their stance leg to accommodate surface stiffness during steady state running. This adjustment allows runners to maintain similar center of mass movement (e.g., ground contact time and stride frequency) regardless of surface stiffness. When runners encounter abrupt transitions in the running surface, they must either make a rapid adjustment or allow the change in the surface stiffness to disrupt their running mechanics. Our goal was to determine how quickly runners adjust leg stiffness when they encounter an abrupt but expected change in surface stiffness that they have encountered previously. Six human subjects ran at 3 m s(-1) on a rubber track with two types of rubber surfaces: a compliant "soft" surface (ksurf = 21.3 kN m(-1) and a non-compliant "hard" surface (ksurf = 533 kN m(-1). We found that runners completely adjusted leg stiffness for their first step on the new surface after the transition. For example, runners decreased leg stiffness by 29{\%} between the last step on the soft surface and the first step on the hard surface (from 10.7 kN m(-1) to 7.6 kN m(-1), respectively). As a result, the vertical displacement of the center of mass during stance ( approximately 7 cm) did not change at the transition despite a reduction in surface compression from 6 cm to less than 0.25 cm. By rapidly adjusting leg stiffness, each runner made a smooth transition between surfaces so that the path of the center of mass was unaffected by the change in surface stiffness.},
+author = {Ferris, D P and Liang, K and Farley, C T},
+doi = {10.1016/s0021-9290(99)00078-0},
+issn = {0021-9290},
+journal = {Journal of biomechanics},
+mendeley-groups = {trombetta},
+month = {aug},
+number = {8},
+pages = {787--94},
+pmid = {10433420},
+title = {{Runners adjust leg stiffness for their first step on a new running surface.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/10433420},
+volume = {32},
+year = {1999}
+}
+@article{Hutchinson2004,
+author = {Hutchinson, John R},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hutchinson - 2004 - Biomechanical modeling and sensitivity analysis of bipedal running ability. I. Extant taxa.pdf:pdf},
+journal = {Journal Of Morphology},
+mendeley-groups = {trombetta},
+pages = {421--440},
+publisher = {Philadelphia, Pa.: Wistar Institute of Anatomy and Biology,[1931-},
+title = {{Biomechanical modeling and sensitivity analysis of bipedal running ability. I. Extant taxa}},
+url = {papers2://publication/uuid/FDF96644-B3A6-45D4-86E7-BEE0199AEDD0},
+volume = {262},
+year = {2004}
+}
+@article{Daley2010,
+abstract = {Economy is a central principle for understanding animal locomotion. Yet, compared with theoretical predictions concerning economy, animals run with compliant legs that are energetically costly. Here, we address this apparent paradox, highlighting two factors that predict benefits for compliant gaits: (i) minimizing cost of work associated with bouncing viscera; and (ii) leg control for robust stability in uneven terrain. We show that consideration of the effects of bouncing viscera predicts an energetic optimum for relatively compliant legs. To compare stability in uneven terrain, we introduce the normalized maximum drop (NMD), a measure based on simple kinematics, which predicts that compliant legs allow negotiation of relatively larger terrain perturbations without failure. Our model also suggests an inherent trade-off in control of leg retraction velocity (omega) for stability: low omega allows higher NMD, reducing fall risk, whereas high omega minimizes peak forces with terrain drops, reducing injury risk. Optimization for one of these factors explicitly limits the other; however, compliant legs relax this trade-off, allowing greater stability by both measures. Our models suggest compromises in leg control for economy and stability that might explain why animals run with compliant legs.},
+author = {Daley, Monica A and Usherwood, James R},
+doi = {10.1098/rsbl.2010.0175},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Daley, Usherwood - 2010 - Two explanations for the compliant running paradox reduced work of bouncing viscera and increased stability in.pdf:pdf},
+issn = {1744-957X},
+journal = {Biology Letters},
+keywords = {Animals,Biological,Biomechanics,Biomechanics: physiology,Energy Metabolism,Energy Metabolism: physiology,Environment,Extremities,Extremities: anatomy {\&} histology,Extremities: physiology,Locomotion,Locomotion: physiology,Models,Viscera,Viscera: anatomy {\&} histology,Viscera: physiology},
+mendeley-groups = {trombetta},
+month = {jun},
+number = {3},
+pages = {418--421},
+pmid = {20335198},
+publisher = {The Royal Society},
+title = {{Two explanations for the compliant running paradox: reduced work of bouncing viscera and increased stability in uneven terrain}},
+url = {papers2://publication/doi/10.1098/rsbl.2010.0175 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2880072{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {6},
+year = {2010}
+}
+@article{Holt2014,
+abstract = {The distal muscle-tendon units of cursorial species are commonly composed of short muscle fibres and long, compliant tendons. It is assumed that the ability of these tendons to store and return mechanical energy over the course of a stride, thus avoiding the cyclic absorption and regeneration of mechanical energy by active muscle, offers some metabolic energy savings during running. However, this assumption has not been tested directly. We used muscle ergometry and myothermic measurements to determine the cost of force production in muscles acting isometrically, as they could if mechanical energy was stored and returned by tendon, and undergoing active stretch-shorten cycles, as they would if mechanical energy was absorbed and regenerated by muscle. We found no detectable difference in the cost of force production in isometric cycles compared with stretch-shorten cycles. This result suggests that replacing muscle stretch-shorten work with tendon elastic energy storage and recovery does not reduce the cost of force production. This calls into question the assumption that reduction of muscle work drove the evolution of long distal tendons. We proposed that the energetic benefits of tendons are derived primarily from their effect on muscle and limb architecture rather than their ability to reduce cyclic muscle work.},
+author = {Holt, Natalie C and Roberts, Thomas J and Askew, Graham N},
+doi = {10.1242/jeb.112813},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Holt, Roberts, Askew - 2014 - The energetic benefits of tendon springs in running is the reduction of muscle work important.pdf:pdf},
+issn = {1477-9145},
+journal = {The Journal of experimental biology},
+keywords = {economy,elastic,force,metabolic,myothermic},
+mendeley-groups = {trombetta},
+month = {nov},
+pages = {4365--4371},
+pmid = {25394624},
+title = {{The energetic benefits of tendon springs in running: is the reduction of muscle work important?}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/25394624},
+year = {2014}
+}
+@article{Arnold2006,
+abstract = {Persons with cerebral palsy frequently walk with excessive knee flexion during terminal swing and stance. This gait abnormality is often attributed to "short" or "spastic" hamstrings that restrict knee extension, and is often treated by hamstrings lengthening surgery. At present, the outcomes of these procedures are inconsistent. This study examined whether analyses of the muscle-tendon lengths and lengthening velocities of patients' hamstrings during walking may be helpful when deciding whether a candidate is likely to benefit from hamstrings surgery. One hundred and fifty-two subjects were cross-classified in a series of multi-way contingency tables based on their pre- and postoperative gait kinematics, muscle-tendon lengths, muscle-tendon velocities, and hamstrings surgeries. The lengths and velocities of the subjects' semimembranosus muscles were estimated by combining kinematic data from gait analysis with a three-dimensional computer model of the lower extremity. Log-linear analysis revealed that the subjects who walked with abnormally "short" or "slow" hamstrings preoperatively, and whose hamstrings did not operate at longer lengths or faster velocities postoperatively, were unlikely to walk with improved knee extension after treatment (p {\textless} 0.05). Subjects who did not walk with abnormally short or slow hamstrings preoperatively, and whose hamstrings did operate at longer lengths or faster velocities postoperatively, tended to exhibit unimproved or worsened anterior pelvic tilt after treatment (p {\textless} 0.05). Examination of the muscle-tendon lengths and velocities allows individuals who walk with abnormally short or slow hamstrings to be distinguished from those who do not, and thus may help to identify patients who are at risk for unsatisfactory postsurgical changes in knee extension or anterior pelvic tilt. {\textcopyright} 2005 Elsevier B.V. All rights reserved.},
+author = {Arnold, Allison S. and Liu, May Q. and Schwartz, Michael H. and {\~{O}}unpuu, Sylvia and Delp, Scott L.},
+doi = {10.1016/j.gaitpost.2005.03.003},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Arnold et al. - 2006 - The role of estimating muscle-tendon lengths and velocities of the hamstrings in the evaluation and treatment of.pdf:pdf},
+issn = {09666362},
+journal = {Gait and Posture},
+keywords = {Cerebral palsy,Gait,Hamstrings,Musculoskeletal model},
+mendeley-groups = {trombetta},
+number = {3},
+pages = {273--281},
+title = {{The role of estimating muscle-tendon lengths and velocities of the hamstrings in the evaluation and treatment of crouch gait}},
+volume = {23},
+year = {2006}
+}
+@article{Liu2008,
+abstract = {Muscles actuate walking by providing vertical support and forward progression of the mass center. To quantify muscle contributions to vertical support and forward progression (i.e., vertical and fore-aft accelerations of the mass center) over a range of walking speeds, three-dimensional muscle-actuated simulations of gait were generated and analyzed for eight subjects walking overground at very slow, slow, free, and fast speeds. We found that gluteus maximus, gluteus medius, vasti, hamstrings, gastrocnemius, and soleus were the primary contributors to support and progression at all speeds. With the exception of gluteus medius, contributions from these muscles generally increased with walking speed. During very slow and slow walking speeds, vertical support in early stance was primarily provided by a straighter limb, such that skeletal alignment, rather than muscles, provided resistance to gravity. When walking speed increased from slow to free, contributions to support from vasti and soleus increased dramatically. Greater stance-phase knee flexion during free and fast walking speeds caused increased vasti force, which provided support but also slowed progression, while contralateral soleus simultaneously provided increased propulsion. This study provides reference data for muscle contributions to support and progression over a wide range of walking speeds and highlights the importance of walking speed when evaluating muscle function. {\textcopyright} 2008.},
+author = {Liu, May Q. and Anderson, Frank C. and Schwartz, Michael H. and Delp, Scott L.},
+doi = {10.1016/j.jbiomech.2008.07.031},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Liu et al. - 2008 - Muscle contributions to support and progression over a range of walking speeds.pdf:pdf},
+issn = {00219290},
+journal = {Journal of Biomechanics},
+keywords = {Forward dynamic simulation,Muscle function,Pediatric gait,Propulsion,Walking speed},
+mendeley-groups = {trombetta},
+number = {15},
+pages = {3243--3252},
+pmid = {18822415},
+title = {{Muscle contributions to support and progression over a range of walking speeds}},
+volume = {41},
+year = {2008}
+}
+@article{Hamner2010,
+abstract = {Muscles actuate running by developing forces that propel the body forward while supporting the body's weight. To understand how muscles contribute to propulsion (i.e., forward acceleration of the mass center) and support (i.e., upward acceleration of the mass center) during running we developed a three-dimensional muscle-actuated simulation of the running gait cycle. The simulation is driven by 92 musculotendon actuators of the lower extremities and torso and includes the dynamics of arm motion. We analyzed the simulation to determine how each muscle contributed to the acceleration of the body mass center. During the early part of the stance phase, the quadriceps muscle group was the largest contributor to braking (i.e., backward acceleration of the mass center) and support. During the second half of the stance phase, the soleus and gastrocnemius muscles were the greatest contributors to propulsion and support. The arms did not contribute substantially to either propulsion or support, generating less than 1{\%} of the peak mass center acceleration. However, the arms effectively counterbalanced the vertical angular momentum of the lower extremities. Our analysis reveals that the quadriceps and plantarflexors are the major contributors to acceleration of the body mass center during running. {\textcopyright} 2010 Elsevier Ltd.},
+author = {Hamner, Samuel R. and Seth, Ajay and Delp, Scott L.},
+doi = {10.1016/j.jbiomech.2010.06.025},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hamner, Seth, Delp - 2010 - Muscle contributions to propulsion and support during running.pdf:pdf},
+issn = {00219290},
+journal = {Journal of Biomechanics},
+keywords = {Forward dynamic simulation,Human locomotion,Induced acceleration analysis,Muscle function,Musculoskeletal modeling},
+mendeley-groups = {trombetta},
+number = {14},
+pages = {2709--2716},
+pmid = {20691972},
+publisher = {Elsevier Ltd},
+title = {{Muscle contributions to propulsion and support during running}},
+url = {http://dx.doi.org/10.1016/j.jbiomech.2010.06.025},
+volume = {43},
+year = {2010}
+}
+@article{Uchida2016,
+abstract = {Muscles attach to bones via tendons that stretch and recoil, affecting muscle force generation and metabolic energy consumption. In this study, we investigated the effect of tendon compliance on the metabolic cost of running using a full-body musculoskeletal model with a detailed model of muscle energetics. We performed muscle-driven simulations of running at 2-5 m/s with tendon force-strain curves that produced between 1 and 10{\%} strain when the muscles were developing maximum isometric force. We computed the average metabolic power consumed by each muscle when running at each speed and with each tendon compliance. Average whole-body metabolic power consumption increased as running speed increased, regardless of tendon compliance, and was lowest at each speed when tendon strain reached 2-3{\%} as muscles were developing maximum isometric force. When running at 2 m/s, the soleus muscle consumed less metabolic power at high tendon compliance because the strain of the tendon allowed the muscle fibers to operate nearly isometrically during stance. In contrast, the medial and lateral gastrocnemii consumed less metabolic power at low tendon compliance because less compliant tendons allowed the muscle fibers to operate closer to their optimal lengths during stance. The software and simulations used in this study are freely available at simtk.org and enable examination of muscle energetics with unprecedented detail.},
+author = {Uchida, Thomas K. and Hicks, Jennifer L. and Dembia, Christopher L. and Delp, Scott L.},
+doi = {10.1371/journal.pone.0150378},
+file = {:home/evangeli/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Uchida et al. - 2016 - Stretching your energetic budget How tendon compliance affects the metabolic cost of running.pdf:pdf},
+issn = {19326203},
+journal = {PLoS ONE},
+mendeley-groups = {trombetta},
+number = {3},
+pages = {1--19},
+title = {{Stretching your energetic budget: How tendon compliance affects the metabolic cost of running}},
+volume = {11},
+year = {2016}
+}
