Adding references and figures from John's ppt

--- a/trombetta.bib
+++ b/trombetta.bib
@@ -6,6 +6,29 @@ journal={Journal of Beating Army},
 volume={22},
 pages={1845--2022}}
 
+@misc{lieberman2020biomechanical,
+author={Lieberman, Dan},
+howpublished={\url{http://barefootrunning.fas.harvard.edu/4BiomechanicsofFootStrike.html}},
+note={date accessed 29 Apr 2020}}
+
+@article{bramble2004endurance,
+author={Bramble, Dennis M and Lieberman, Daniel E},
+year={2004},
+title={Endurance running and the evolution of {{\emph{{H}omo}}}}
+journal={Nature},
+volume={432},
+pages={345--352}},
+doi={10.1038/nature03052}}
+
+@article{lieberman2010foot,
+author={Lieberman, Daniel E and Venkadesan, Madhusudhan and Werbel, William A and Daoud, Adam I and D'Andrea, Susan and Davis, Irene S and Mang'Eni, Robert Ojiambo and Pistiladis, Yannis},
+year={2010},
+title={Foot strike patterns and collision forces in habitually barefoot versus shod runners},
+journal={Nature},
+volume={463},
+pages={531--535},
+doi={10.138/nature08723}}
+
 
 
 
