--- a/trombetta.tex
+++ b/trombetta.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
-\title{Biomechanics of shin splints and the effect of running style}
-\author{J Trombetta}
+\title{Running biomechanics and the effect of heel versus forefoot strike}
+\author{John Trombetta\thanks{Author is with the Department of Mechanical Engineering, United States Naval Academy. Address for correspondence: \emph{m236348@usna.edu}}
 \date{\today}
 
 \usepackage{siunitx}
@@ -18,20 +18,31 @@ Write one paragraph here that explains what your report is about.
 \section{Introduction}
 % Trombetta: Most of what I have is not running shin splints stuff; hopeful you found some there. I do have some general human running stuff in the list. You might ask 1/C Anmol Walha about running biomechanics, and 1/C Lily Bautista about walking and ankles? I have their 485 projects but not the references they found... 
 
+To study the effectiveness and injury risk of heel strike versus forefoot strike running.
+
+Explain heel strike versus forefoot strike
+
 Work from an inverted triangle (broader topics to more specific). Explain what you are interested, review some relevant literature, and then set up what your specific research question is. Cite literature using the author-year format, as in \citep{buck2020go}. If you need pictures to explain the relevant biomechanics, feel free to include. This section should also say a little why your research matters. 
 
 The last part of this section should be the specific hypotheses you seek to test. 
 
 \section{Methods and materials}
-Explain what you did, in enough detail so someone can replicate it. If you need pictures or drawings to explain the setup feel free to use them. 
+%Explain what you did, in enough detail so someone can replicate it. If you need pictures or drawings to explain the setup feel free to use them. 
+
+\subsection{Video kinematics on a treadmill}
+\subsection{Measurement of accelerations using a smart phone}
+\subsection{Improvised force plate kymograph}
 
 \section{Results}
-Explain factually what you found... leave interpretation of what it means for the final discussion section. Here you would include plots of what you found or comparison tables.
+%Explain factually what you found... leave interpretation of what it means for the final discussion section. Here you would include plots of what you found or comparison tables.
+\subsection{Video kinematics on a treadmill}
+\subsection{Improvised force plate kymograph}
 
 \section{Discussion}
 Here discuss what your results mean. Are your hypotheses supported or not? Do you have an answer to your overall research question?
 
 \section{Acknowledgements}
+
 
 % References
 \bibliography{trombetta.bib}
