Updates from Overleaf

--- a/methods.tex
+++ b/methods.tex
@@ -1,6 +1,11 @@
 \section{Methods and materials}
-%Explain what you did, in enough detail so someone can replicate it. If you need pictures or drawings to explain the setup feel free to use them. 
+\label{sec:methods}
+
+\subsection{Experimental subject}
+I used a single experimental subject, \SI{19}{\year} old male, height \SI{5}{\foot} \SI{8}{\inch} (\SI{1.73}{\meter}), mass \SI{160}{\pound} (\SI{72.6}{\kilo\gram}) \textbf{FIX}. For this subject, measured hip height from the ground was \SI{0.88}{\meter} \textbf{FIX}. For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter} \textbf{FIX}. During running trials, the subject wore physical training (PT) gear consisting of running shorts, a tshirt, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast dark uppers and a lite sole and heel. The subject was in good physical condition, having completed one year of training as a midshipman at the US Naval Academy. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require IRB application, approval, or oversight.}.  
+
+\subsection{Improvised force plate kymograph}
+
+\subsection{Measurement of accelerations using a smart phone}
 
 \subsection{Video kinematics on a treadmill}
-\subsection{Measurement of accelerations using a smart phone}
-\subsection{Improvised force plate kymograph}
