--- a/results.tex
+++ b/results.tex
@@ -1,4 +1,9 @@
 \section{Results}
+\label{sec:results}
 %Explain factually what you found... leave interpretation of what it means for the final discussion section. Here you would include plots of what you found or comparison tables.
-\subsection{Video kinematics on a treadmill}
+
 \subsection{Improvised force plate kymograph}
+
+\subsection{Measurements of acceleration using a smartphone}
+
+\subsection{Video kinematics on a treadmill}
