Updates from Overleaf

--- a/methods.tex
+++ b/methods.tex
@@ -2,10 +2,43 @@
 \label{sec:methods}
 
 \subsection{Experimental subject}
-I used a single experimental subject, \SI{19}{\year} old male, height \SI{5}{\foot} \SI{8}{\inch} (\SI{1.73}{\meter}), mass \SI{160}{\pound} (\SI{72.6}{\kilo\gram}) \textbf{FIX}. For this subject, measured hip height from the ground was \SI{0.88}{\meter} \textbf{FIX}. For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter} \textbf{FIX}. During running trials, the subject wore physical training (PT) gear consisting of running shorts, a tshirt, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast dark uppers and a lite sole and heel. The subject was in good physical condition, having completed one year of training as a midshipman at the US Naval Academy. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require IRB application, approval, or oversight.}.  
+I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{8}{\inch} (\SI{1.73}{\meter}), mass \SI{160}{\pound} (\SI{72.6}{\kilo\gram}) \textbf{FIX}. For this subject, measured hip height from the ground was \SI{0.88}{\meter} \textbf{FIX}. For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter} \textbf{FIX}. During running trials, the subject wore physical training  gear consisting of running shorts, a tshirt, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast dark uppers and a lite sole and heel that aided in manual digitization. The subject was in good physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require IRB application, approval, or oversight.}.  
+
+\textbf{How was subject trained to do heel strike versus toe strike (foot strike) running styles?}
+
+
 
 \subsection{Improvised force plate kymograph}
+To measure horizontal and vertical ground reaction forces (GRFs), I originally intended to use a three-axis force plate (9260AA6; Kistler; Novi, MI), however, due to the global COVID-19 pandemic, the equipment was not available. Instead, I improvised a one-axis (vertical only) force plate (\fref{fig:methods:forceplate}) using a flexure made of a \SI{48 x 24 x 0.3125}{\inch} \textbf{FIX} sheet of scrap bead board simply supported at the ends between two bricks. I attached a red dry erase marker (EXPO; Newell Brands; Atlanta, GA) horizontally, pointing laterally, at the midpoint of the flexure, so that the marker would mark a \SI{11x16}{\inch} whiteboard (Office Depot, Union, NJ))on the right side. The lowest point reached by the marker is a measure of the maximum vertical GRF experienced during contact. Additionally, I found that horizontal GRF would displace the flexure horizontally, providing some indication of their general magnitude. \textbf{Add refs to Malet etc, Denny.}
+\begin{figure}
+\begin{center}
+    \textbf{Fill in.}
+\end{center}
+\caption{Improvised one-axis force plate kymograph}
+\label{fig:methods:forceplate}
+\end{figure}
+
+\textbf{How many steps and in what order.} After each trial, the resulting marker pattern on the white board was photographed using a smartphone camera (S8; Samsung; Seoul, South Korea) \textbf{FIX} to allow rough comparison of the magnitude of vertical GRF. 
+
+
 
 \subsection{Measurement of accelerations using a smart phone}
+In addition to the rough indication of vertical GRF from the improvised force plate, I measured accelerations in three axes using the same smartphone (S8; Samsung; Seoul, South Korea) \textbf{FIX}, centered \SI{10}{\centi\meter} below the navel and taped using \SI{2}{\inch} duct tape (Home Depot; Closter, NJ) \textbf{FIX}. I used the \Matlab\ Mobile app (Mathworks; Natick, MA) to log (STUFF) for \SI{20}{\second} segments of steady running using each running style. To avoid end effects during start and stop, I used the middle \SI{10}{\second} segment of each recording for analyses of the acceleration of the center of mass. 
+\begin{figure}
+\begin{center}
+    \textbf{Fill in.}
+\end{center}
+\caption{Need a photo of a phone taped to a guy's belly}
+\label{fig:methods:accel}
+\end{figure}
+
+
 
 \subsection{Video kinematics on a treadmill}
+To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (SOURCE) using a smartphone camera (S8; Samsung; Seoul, South Korea) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, respectively.
+\begin{figure}
+\caption{Need a figure of example setup, points digitized, and maybe angles annotated.}
+\label{fig:methods:kinematics}
+\end{figure}
+
+\textbf{Kinematic analysis... cite Hedrick... cite Revzen. How get joint angles. How judge start of contact phase, end of contact phase. What speed ran treadmill at. etc}
