--- a/trombetta.bib
+++ b/trombetta.bib
@@ -14,7 +14,7 @@ note={date accessed 29 Apr 2020}}
 @article{bramble2004endurance,
 author={Bramble, Dennis M and Lieberman, Daniel E},
 year={2004},
-title={Endurance running and the evolution of {{\emph{{H}omo}}}}
+title={Endurance running and the evolution of {{\emph{{H}omo}}}},
 journal={Nature},
 volume={432},
 pages={345--352}},
