Updates from Overleaf

--- a/methods.tex
+++ b/methods.tex
@@ -2,7 +2,7 @@
 \label{sec:methods}
 
 \subsection{Experimental subject}
-I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{8}{\inch} (\SI{1.73}{\meter}), mass \SI{160}{\pound} (\SI{72.6}{\kilo\gram}) \textbf{FIX}. For this subject, measured hip height from the ground was \SI{0.88}{\meter} \textbf{FIX}. For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter} \textbf{FIX}. During running trials, the subject wore physical training  gear consisting of running shorts, a tshirt, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast dark uppers and a lite sole and heel that aided in manual digitization. The subject was in good physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require IRB application, approval, or oversight.}.  
+I used a single experimental subject, age \SI{19}{\year}, male, height \SI{5}{\foot} \SI{8}{\inch} (\SI{1.73}{\meter}), mass \SI{160}{\pound} (\SI{72.6}{\kilo\gram}) \textbf{FIX}. For this subject, measured hip height from the ground was \SI{0.88}{\meter} \textbf{FIX}. For scale purposes, the subject shoe size was US9.5M, heel to toe length \SI{0.30}{\meter} \textbf{FIX}. During running trials, the subject wore physical training  gear consisting of running shorts, a tshirt, and athletic shoes (Lunarlite; Nike, Beaverton, OR) \textbf{FIX} with high contrast black uppers and a white sole and heel that aided in manual digitization. The subject was in good physical condition, having completed his first year as a midshipman at the US Naval Academy, including its renowned Physical Education Program. The subject provided his informed consent before measurements\footnote{This pilot study was conducted under the following exemption: The project in EW282D is designed to teach research methods through student interaction with data about individuals. Student class assignments typically do not meet the federal regulatory definition of research, thus do not require IRB application, approval, or oversight.}.  
 
 \textbf{How was subject trained to do heel strike versus toe strike (foot strike) running styles?}
 
@@ -35,7 +35,7 @@ In addition to the rough indication of vertical GRF from the improvised force pl
 
 
 \subsection{Video kinematics on a treadmill}
-To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (SOURCE) using a smartphone camera (S8; Samsung; Seoul, South Korea) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, respectively.
+To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO) using a smartphone camera (S8; Samsung; Seoul, South Korea) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, respectively.
 \begin{figure}
 \caption{Need a figure of example setup, points digitized, and maybe angles annotated.}
 \label{fig:methods:kinematics}
