Updates from Overleaf

--- a/methods.tex
+++ b/methods.tex
@@ -35,7 +35,7 @@ In addition to the rough indication of vertical GRF from the improvised force pl
 
 
 \subsection{Video kinematics on a treadmill}
-To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO) using a smartphone camera (S8; Samsung; Seoul, South Korea) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, respectively.
+To examine changes in kinematics and gait during the different running styles, I filmed the subject running on a treadmill (Performance 800; TRUE Fitness; St Louis, MO). Ideally I would have used a high speed camera (TS5; Fastec; San Diego, CA), however, COVID-19 required me to improvise. Instead, I used a smartphone camera (S8; Samsung; Seoul, South Korea) filming from the left at \SI{1}{\meter} \textbf{FIX}. The camera operated at \SI{30}{\frame\per\second} and \num{1920x1080} pixel resolution. Two segments were obtained for analysis, \SI{11}{\second} and \SI{13}{\second} in length, for heel-strike and toe-strike styles, respectively.
 \begin{figure}
 \caption{Need a figure of example setup, points digitized, and maybe angles annotated.}
 \label{fig:methods:kinematics}
